Update Jekyll and Ruby, sidebar

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,6 +11,7 @@
             </svg><span>Subscribe</span>
           </a>
         </p>
+      {{ site.email }}
       {%- if site.author %}
         <ul class="contact-list">
           {% if site.author.name -%}
