--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,13 +11,18 @@
 
   {%- if titles_size > 0 -%}
     <nav class="site-nav">
+      <a class="page-link bevelled" href="{{ "/" | relative_url }}"><img src="/assets/images/theme/home.gif">Home</a>
       {%- for path in page_paths -%}
         {%- assign my_page = site.pages | where: "path", path | first -%}
         {%- assign bull_file = my_page.bullet | default: 'bullet' -%}
         {%- if my_page.title -%}
-        <a class="page-link" href="{{ my_page.url | relative_url }}"><img src="/assets/images/theme/{{ bull_file }}.gif">{{ my_page.title | escape }}</a>
+        <a class="page-link bevelled" href="{{ my_page.url | relative_url }}"><img src="/assets/images/theme/{{ bull_file }}.gif">{{ my_page.title | escape }}</a>
         {%- endif -%}
       {%- endfor -%}
+      <hr class="chain">
+      <a class="page-link bevelled" target="_blank" href="https://github.com/svbnet">GitHub</a>
+      <a class="page-link bevelled" target="_blank" href="https://www.youtube.com/@svbnet">YouTube</a>
+      <a class="page-link bevelled" target="_blank" href="https://bsky.app/profile/svbnet.co">Bluesky</a>
     </nav>
   {%- endif -%}
 </header>
