--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -26,15 +26,13 @@ layout: base
       {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
       {%- for post in posts -%}
       <li>
-        <span class="post-meta">{{ post.date | date: date_format }}</span>
+        <time class="post-meta" datetime="{{ post.date }}">{{ post.date | date: date_format }}</time>
         <h3>
           <a class="post-link" href="{{ post.url | relative_url }}">
             {{ post.title | escape }}
           </a>
         </h3>
-        {%- if site.show_excerpts -%}
-          {{ post.excerpt }}
-        {%- endif -%}
+        <span class="post-excerpt">{{ post.excerpt }}</span>
       </li>
       {%- endfor -%}
     </ul>
