--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -26,13 +26,11 @@ layout: base
       {%- endif -%}</p>
   </header>
 
+  <hr class="rainbow">
+
   <div class="post-content e-content" itemprop="articleBody">
     {{ content }}
   </div>
-
-  {%- if site.disqus.shortname -%}
-    {%- include disqus_comments.html -%}
-  {%- endif -%}
 
   <a class="u-url" href="{{ page.url | relative_url }}" hidden></a>
 </article>
