Final layout and content

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -20,9 +20,18 @@
         {%- endif -%}
       {%- endfor -%}
       <hr class="chain">
-      <a class="page-link bevelled" target="_blank" href="https://github.com/svbnet">GitHub</a>
-      <a class="page-link bevelled" target="_blank" href="https://www.youtube.com/@svbnet">YouTube</a>
-      <a class="page-link bevelled" target="_blank" href="https://bsky.app/profile/svbnet.co">Bluesky</a>
+      <a class="page-link bevelled" target="_blank" href="https://github.com/svbnet">
+        <img src="/assets/images/site/github.svg" alt="GitHub logo">
+        GitHub
+      </a>
+      <a class="page-link bevelled" target="_blank" href="https://www.youtube.com/@svbnet">
+        <img src="/assets/images/site/yt.svg" alt="YouTube logo">
+        YouTube
+      </a>
+      <a class="page-link bevelled" target="_blank" href="https://bsky.app/profile/svbnet.co">
+        <img src="/assets/images/site/bsky.svg" alt="Bluesky logo">
+        Bluesky
+      </a>
     </nav>
   {%- endif -%}
 </header>
