--- a/_sass/retro/_layout.scss
+++ b/_sass/retro/_layout.scss
@@ -8,6 +8,11 @@
   grid-row: 2;
   grid-column: 1 / 3;
   background-color: rgba($dm-brand-color-dark, 0.65);
+  padding: 10px;
+
+  @include media-query($on-laptop) {
+    grid-row: 3;
+  }
 }
 
 .site-nav {
@@ -40,6 +45,11 @@
   grid-template-rows: auto 72px;
   padding: 30px;
 
+  @include media-query($on-laptop) {
+    grid-row: 2;
+    grid-template-columns: auto;
+  }
+
   .inner-content {
     grid-row: 1;
   }
@@ -53,4 +63,19 @@
     background-position: center center;
   }
 
+}
+
+.post-list {
+  margin-left: 0;
+
+  &>li {
+    display: block;
+    list-style: none;
+    margin: 20px 0;
+    border-bottom: 1px solid #444;
+
+    &:last-child {
+      border: none;
+    }
+  }
 }
